Enable java pattern matching in NetService module