@@ -53,4 +53,19 @@ micronaut {
     }
 }
 
+compileJava {
+    options.compilerArgs = ["--enable-preview"]
+}
 
+compileTestJava {
+    options.compilerArgs = ["--enable-preview"]
+}
+
+test {
+       jvmArgs("--enable-preview")
+}
+
+
+run {
+    jvmArgs("--enable-preview")
+}
